--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,13 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+h1{
+  font-size: 3.5rem;
+
 }
 
 @layer utilities {
